src/test/ui/rfc-2093-infer-outlives/nested-enum.stderr
error: rustc_outlives
  --> $DIR/nested-enum.rs:16:1
   |
LL | / enum Foo<'a, T> { //~ ERROR 16:1: 19:2: rustc_outlives
LL | |
LL | |     One(Bar<'a, T>)
LL | | }
   | |_^
   |
   = note: T : 'a

error: aborting due to previous error

